# mcp-llm-agent

./: README.md
mcp-client/: pyproject.toml
mcp-client/api/: README.md  client.py  main.py
mcp-client/api/utils/: logger.py
mcp-client/ui/: README.md  chatbot.py  main.py
mcp-client/ui/utils/: logger.py
mcp-server/: README.md  pyproject.toml  server.py
