[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "anthropic>=0.57.1",
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
